# statigent

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml
.codex/skills/iterate-statigent-benchmark-design/: SKILL.md
.codex/skills/iterate-statigent-benchmark-design/agents/: openai.yaml
.codex/skills/iterate-statigent-benchmark-design/references/: failure-analysis-checklist.md
baseline/react/: __init__.py  agent.py  eval_dabench.py  eval_dsbench_da.py  eval_dsbench_dm.py  run_dabench_mini.py  tools.py
config/: models.toml
docs/: architecture_zh.md  benchmarks_zh.md  how_to_eval.md
docs/superpowers/plans/: 2026-05-13-model-registry.md  2026-05-14-benchmark-adapter-fixes.md  2026-05-14-benchmark-adapter-layer.md  2026-05-15-docker-sandbox.md  2026-05-17-data-science-agent-architecture.md  2026-05-21-data-exploration-langgraph.md
docs/superpowers/specs/: 2026-05-13-model-registry-design.md  2026-05-14-benchmark-adapter-design.md  2026-05-15-docker-sandbox-design.md  2026-05-17-data-science-agent-architecture-design.md  2026-05-21-data-exploration-langgraph-design.md
examples/: eval_dabench.py  eval_dsbench_da.py  profile_dataset.py
src/statigent/: __init__.py  errors.py  retry.py  schemas.py
src/statigent/agents/: __init__.py  data_science.py
src/statigent/baseline/: __init__.py  react.py
src/statigent/benchmarks/: __init__.py  base.py  dabench.py  dsbench.py  evaluators.py  mlebench.py  persistence.py  reporting.py
src/statigent/exploration/: __init__.py  actors.py  orchestrator.py  prompts.py  state.py  tools.py
src/statigent/input/: __init__.py  planner.py  profiler.py
src/statigent/models/: __init__.py  defaults.toml  registry.py
src/statigent/notebook/: __init__.py  base.py  docker.py  fake.py
src/statigent/output/: __init__.py  renderer.py
src/statigent/sandbox/: __init__.py  docker.py
tests/: test_errors.py  test_models_registry.py  test_schemas.py
tests/agents/: test_data_science_agent.py  test_protocol_smoke.py
tests/baseline/: test_react.py
tests/benchmarks/: test_base.py  test_dabench.py  test_dsbench.py  test_evaluators.py  test_mlebench.py  test_persistence.py  test_reporting.py
tests/exploration/: test_actors.py  test_orchestrator.py  test_prompts.py
tests/input/: test_planner.py  test_profiler.py
tests/models/: test_registry.py
tests/notebook/: test_docker_kernel.py  test_fake_kernel.py
tests/output/: test_renderer.py
tests/sandbox/: test_docker.py
tests/tools/: test_trace_statigent.py
tools/: backfill_average_steps.py  calc_evaluation.py  profile_dataset.py  test_model_connection.py  trace_react_agent.py  trace_statigent.py
