[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "statigent"
version = "0.1.0"
description = "A data science agent for automated analysis, feature engineering, model building, and insight generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "deepagents>=0.6.1",
  "httpx[socks]>=0.28.1",
  "langchain>=1.3.0",
  "langchain-community>=0.4.1",
  "langchain-deepseek>=1.0.1",
  "langchain-ollama>=1.1.0",
  "langgraph>=1.2.0",
  "loguru>=0.7.3",
  "openai>=2.36.0",
  "openpyxl>=3.1.5",
  "pandas>=3.0.3",
  "pyarrow>=24.0.0",
  "pydantic>=2.13.4",
  "rich>=15.0.0",
  "socksio>=1.0.0",
  "tenacity>=9.1.4",
  "typer>=0.25.1",
  "xlrd>=2.0.2",
]

[dependency-groups]
benchmark = [
    "mlebench",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
datascience = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["statigent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["langchain.*", "langgraph.*", "deepagents.*", "loguru", "mlebench.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests",
]

[tool.coverage.run]
source = ["statigent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.uv.workspace]
members = [
    "benchmarks/MLE-Bench",
]

[tool.uv.sources]
mlebench = { workspace = true, editable = true }
